fix: word-break in docs navigation

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -353,6 +353,7 @@ kbd {
   }
 
   &__label {
+    word-break: normal;
   }
 
   &__label::before,
